2005-01-26  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (includehurd_HEADERS): Add startup.h.

2004-12-01  Neal H. Walfield  <neal@gnu.org>

	* types.h (HURD_CAP_CLIENT_ID_BITS): Move to
	../libhurd-cap-server/cap-server-internal.h.  Prepend
	underscore.
	(HURD_CAP_ID_BITS): Likewise.
	(_HURD_CAP_CLIENT_ID_MASK): Likewise.
	(_HURD_CAP_ID_MASK): Likewise.
	(hurd_cap_id_t): Likewise.
	(hurd_cap_client_id_t): Likewise.
	(hurd_cap_client_id): Likewise.
	(hurd_cap_id): Likewise.
	(hurd_cap_handle_make): Likewise.

2004-11-02  Marcus Brinkmann  <marcus@gnu.org>

	* startup.h (struct hurd_startup_data): Add new member task.

2004-10-27  Marcus Brinkmann  <marcus@gnu.org>

	* startup.h (struct hurd_startup_data): New member UTCB_AREA.
	(struct hurd_startup_cap): Rename member cap_id to cap_handle, and
	change its type accordingly.

2004-10-26  Marcus Brinkmann  <marcus@gnu.org>

	* startup.h: New file.
	* headers.m4: Add hurd/startup.h.

2004-04-09  Marcus Brinkmann  <marcus@gnu.org>

	* types.h (hurd_cap_t): Rename to ...
	(hurd_cap_handle_t): ... this.  Likewise for all users.

	* types.h (hurd_cap_make): Use bit-wise OR, not logical OR.

2004-04-07  Marcus Brinkmann  <marcus@gnu.org>

	* types.h (hurd_cap_make): New function.
	(_HURD_CAP_CLIENT_ID_MASK, _HURD_CAP_ID_MASK): New macros.

2004-04-01  Marcus Brinkmann  <marcus@gnu.org>

	* types.h: Include <l4/thread.h>.

2004-03-25  Marcus Brinkmann  <marcus@gnu.org>

	* types.h: Protect inclusion with _HURD_TYPES_H.

2004-03-22  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am: New file.
	* headers.m4: New file.
	* types.h: New file.	