@@ -1,3 +1,8 @@
+2005-01-26  Marcus Brinkmann  <marcus@gnu.org>
+
+	* wortel.c (start_elf): Initialize PHYS_STARTUP->envz and
+	PHYS_STARTUP->envz_len.
+
 2005-01-11  Neal H. Walfield  <neal@gnu.org>
 
 	* startup.c (physmem_map): Rename . . .
